Fix the overlapping problem with the fixed header

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -662,3 +662,15 @@ a {
             padding: 0;
             }
     }
+
+// To visually "push down" the content of the sections I have created new anchoring elements (empty divs) that are positioned relative, so they can move up the amount of the header from their initial position and so avoid header  overlapping! 
+
+#anchoring-about-us {
+    position: relative;
+    top: -130px;
+}
+
+#anchoring-team {
+    position: relative;
+    top: -130px;
+}
